2016-02-09  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Documentation file for the cm package.

	* doc/modules.rst: Included the cm package.

	* typhon/__init__.py: Import new package cm.

	* typhon/cm: Package to provide matplotlib colormaps.

	* typhon/cm/__init__.py:

	The init file is used to collect the colormap data from all data files
	stored in typhon/cm. It creates and registers the colormaps.

	* typhon/cm/_cmocean.py: Ported colormaps from the cmocean project.

2016-02-08  Lukas Kluft <lukas.kluft@gmail.com>

	* /typhon/arts/griddedfield.py:

	Added classmethod from_nc. This function extracts a given variable from a
	netCDF file and stores it alongside its grids to a GriddedField object.

	Added function to_dict which converts a GriddedField into a Python
	dictionary.

	* typhon/arts/tests/test_griddedfield.py:

	Added test to check the conversion into a dictionary.

2016-02-04  Oliver Lemke  <olemke@core-dump.info>

	* typhon/legacy/, doc/legacy.rst, doc/arts.rst, doc/modules.rst,
	doc/xml.rst:

	Remove legacy module.

2016-02-03  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Increased version to 0.2.2 after upload to PyPi.

2016-02-02  Lukas Kluft <lukas.kluft@gmail.com>

	* ./: Ignore tags file in top level directory.

	* typhon/arts/{catalogues.py,griddedfield.py,retrieval.py,scattering.py}:

	The setters for all member variables now use the return_if_arts_type()
	function to perform proper type checks.

	* typhon/arts/tests/test_griddedfield.py: Fixed a broken test case.

	* typhon/arts/utils.py:

	Utility functions to interact with ARTS specific tasks. Currently containing
	get_arts_typename() and return_if_arts_type() which are mostly used to
	properly check data types when creating objects.

	* typhon/arts/xml/names.py:

	The mapping of basic types is extended with additional numpy integer and
	float types.

	* typhon/arts/xml/write.py (get_arts_typename):

	Moved to /typhon/arts/utils.py.
