@@ -5,7 +5,8 @@ data.
 
 """
 
-from matplotlib.colors import ListedColormap
+from matplotlib.colors import LinearSegmentedColormap
+from matplotlib.cm import register_cmap
 
 from ._cmocean import datad as _cmocean_datad
 
@@ -14,9 +15,12 @@ datad = _cmocean_datad
 
 cmaps = {}
 for (name, data) in datad.items():
-    cmaps[name] = ListedColormap(data, name=name)
-    cmaps[name + '_r'] = ListedColormap(data[::-1], name=name + '_r')
+    cmaps[name] = LinearSegmentedColormap.from_list(name, data)
+    cmaps[name + '_r'] =LinearSegmentedColormap.from_list(name + '_r', data[::-1])
 
 locals().update(cmaps)
+
+for name, cmap in cmaps.items():
+    register_cmap(name, cmap)
 
 __all__ = list(cmaps.keys())
